fixed spacing in layout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -563,6 +563,7 @@ button {
 }
 
 .lola-layout--container {
+  width: 100%;
   max-width: 350px;
   margin-left: auto;
   margin-right: auto;
